--- a/adventure/storyPage.html.template
+++ b/adventure/storyPage.html.template
@@ -2,20 +2,30 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="/static/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400" rel="stylesheet">
+
 </head>
 
 <body>
-	<h1>{{.Title}}</h1>
+	<div class="row">	
+		<img src = "/static/gopher.svg" alt="Go gopher"/ class="gopher">
+	</div>
 	
-    {{ range .StoryLines}}
-	<p> {{ . }}
-	{{ end }}
+	<div class="row">
+		<h1>{{.Title}}</h1>
+	</div>
+
+	<div class="row">
+    	{{ range .StoryLines}}
+		<p> {{ . }}
+		{{ end }}
 	
-    <ul>
-		{{ range .StoryOptions}}
-		<li><a href="/{{.Label}}/">{{.Description}}</a></li>
-		{{end}}
-	</ul>
+    	<ol>
+			{{ range .StoryOptions}}
+			<li><a href="/{{.Label}}/">{{.Description}}</a></li>
+			{{end}}
+		</ol>
+	</div>
 </body>
 
 </html>
